   * Added support for TagLib 2.0.

  CHANGES:
   * Amarok now depends on TagLib 1.12, Qt 5.15, and KDE Frameworks 5.77.
   * Wide-ranging changes to remove usages of deprecated methods of Qt and
     KDE Frameworks, that should not affect functionality.
   * Removed upnpcollectionplugin.
   * Non-functional OSD positioning settings disabled in UI on Wayland for now.

  BUGFIXES:
   * Fix playlist generator UI strings. (BR 423598)
   * Fix potential corruption of Ogg files by requiring a recent-enough TagLib
     version (BR 397184).
   * Fix TagLib Extras to be treated as optional and not required for building Amarok.
   * Various fixes for e.g. crashes (including BR 428769, BR 444408, BR 468303,
     BR 393080, BR 446543), problems of playback stalling on missing files (including
     partial fix for BR 438651), UI bugs (e.g. podcasts BR 484395, BR 219518, and playlist
     layout editor), CD collections (BR 455371, BR 279188), and .desktop files, AppStream
     metadata and DBus service specifications.


VERSION 2.9.71
  FEATURES:
   * Initial version of Qt 5 / KDE Frameworks 5 port.

  CHANGES:
   * Amarok now depends on Qt 5.8 and KDE Frameworks 5. The changes, which may include
     functionalities temporarily or permanently removed due to porting, are too numerous
     to be accurately represented here.

  BUGFIXES:


VERSION 2.9.0
  FEATURES:

  CHANGES:
   * Substitute deprecated MySQL option --myisam-recover for compatibility with
     MySQL 5.7+ thanks to Terje Rosten, Stefano Pettini. (BR 354255)

  BUGFIXES:
   * Fix integer fields, like length, always showing up as zero in filter creation
     dialog; thanks to Stefano Pettini. (BR 341661)
   * Fix background color of the lyrics applet, thanks to Stefano Pettini. (BR 314854)
   * Fix Organize tracks / Guess tags presets not persisted properly;
     thanks to Stefano Pettini. (BR 226144)
   * Fix MPRIS2 DesktopEntry name, makes media controls in Plasma 5.7 taskbar work